--- a/Notebook/Fraud.ipynb
+++ b/Notebook/Fraud.ipynb
@@ -4027,9 +4027,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Project(Python 3.10)",
+   "display_name": "Project",
    "language": "python",
-   "name": "project"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
