Update ML notebook with version changes and reset execution count
- Changed execution count from 5 to 1 for the initial cell.
- Updated Numpy version from 2.3.1 to 2.1.2.
- Updated Pandas version from 2.2.3 to 2.3.1.
- Updated Matplotlib version from 3.10.0 to 3.10.5.
- Updated XGBoost version from 3.0.2 to 3.0.3.
- Updated kernelspec display name to include Python version.

--- a/Notebook/ML.ipynb
+++ b/Notebook/ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "ef44755f",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numpy Version: 2.3.1\n",
-      "Pandas Version: 2.2.3\n",
+      "Numpy Version: 2.1.2\n",
+      "Pandas Version: 2.3.1\n",
       "Seaborn Version: 0.13.2\n",
-      "Matplotlib Version: 3.10.0\n",
+      "Matplotlib Version: 3.10.5\n",
       "Python Version: 3.13.5\n",
-      "XGBoost Version: 3.0.2\n",
+      "XGBoost Version: 3.0.3\n",
       "Lightgbm Version: 4.6.0\n"
      ]
     }
@@ -866,9 +866,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Project",
+   "display_name": "Project(Python 3.13)",
    "language": "python",
-   "name": "python3"
+   "name": "project"
   },
   "language_info": {
    "codemirror_mode": {
